cyclonedx-bom/src/specs/common/snapshots/cyclonedx_bom__specs__common__attached_text__test__it_should_write_xml_no_attributes.snap
---
source: cyclonedx-bom/src/specs/common/attached_text.rs
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<text>content</text>
